Bug 1496706 - Windows 8 doesn't return valid IInspectable when clicking toast notification. r=aklotz, a=RyanVM

When clicking toast notification window, OnActivate is called.  When using
Windows 8, 2nd parameter (IInspectable) might be nullptr.

So when this parameter is nullptr, it should recognize as alertclickcallback
with mClickable=true.

Differential Revision: https://phabricator.services.mozilla.com/D8076